--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -21,8 +21,8 @@ twitter: ''
 # Contact (edit or remove options as required)
 
 email: xavier.jeiziner@amanox.ch
-phone: +41 79 898 25 84
-address:
+phone: +41 31 320 10 80
+address: Amanox Solutions
   street: Dammweg 9
   city: Bern
   region: BE
