--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,8 +23,7 @@ twitter: ''
 email: xavier.jeiziner@amanox.ch
 phone: +41 31 320 10 80
 address:
-  street: Amanox Solutions
-Dammweg 9
+  street: Dammweg 9
   city: Bern
   region: BE
   postcode: '3013'
