--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: xavier.jeiziner@amanox.ch
+email: xavier.jeiziner@axians.com
 phone: +41 31 320 10 80
 address:
   street: Dammweg 9
