--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -142,11 +142,8 @@ map:
   api_key: ''
   zoom: 15
 marketing:
-  google_analytics: ''
-  google_tag_manager: ''
-  google_site_verification: ''
-  baidu_site_verification: ''
-  baidu_tongji: ''
+  seo:
+    noindex: true
 cms:
   branch: master
   local_backend: false
